# taurus-cdt

./: .cmake-format.json  .gitignore  CMakeLists.txt  README.md
docker/: dockerfile
docker/contract-builder/: Dockerfile
docs/: index.md
docs/02_installation/: index.md
docs/05_features/: 10_resource_payer.md  20_return_values_from_actions.md  30_binary-extension.md  40_native-tester-compilation.md  50_cdt_as_llvm_plugin.md  60_crypto_algorithms.md  70_protocol_buffers.md  80_memory_management.md
docs/06_how-to-guides/: 50_how-to-create-and-use-action-wrappers.md  60_how-to-return-values-from-actions.md
docs/06_how-to-guides/10_compile/: 01_compile-a-contract-via-cli.md  02_how-to-configure-cmake.md
docs/06_how-to-guides/20_authorization/: how_to_restrict_access_to_an_action_by_user.md
docs/06_how-to-guides/30_key-value-api/kv_map/: 10_how-to-use-kv-map.md  30_how-to-upsert-into-kv-map.md  40_how-to-delete-from-kv-map.md  50_how-to-iterate-kv-map.md  70_how-to-find-in-kv-map.md  (+2 more)
docs/06_how-to-guides/40_multi-index/: how-to-define-a-primary-index.md  how-to-define-a-secondary-index.md  how-to-define-a-singleton.md  how-to-delete-data-from-a-multi-index-table.md  how-to-insert-data-into-a-multi-index-table.md  how-to-instantiate-a-multi-index-table.md  how-to-iterate-and-retrieve-a-multi_index-table-based-on-secondary-index.md  how-to-iterate-and-retrieve-a-multi_index-table.md  how-to-modify-data-in-a-multi-index-table.md
docs/07_best-practices/: 02_naming-conventions.md  03_resource-planning.md  04_data-design-and-migration.md  05_securing_your_contract.md  07_error_handling.md  11_debugging_a_smart_contract.md
docs/07_best-practices/08_abi/: 00_understanding-abi-files.md  01_abi-code-generator-attributes-explained.md  02_manually_write_an_ABI_file_explained.md
docs/08_troubleshooting/: index.md
docs/09_tutorials/: 01_binary-extension.md  02_abi-variants.md  03_create-an-abi-file.md
examples/kv_table_tests/src/: kvtest.cpp
imports/: eosio.imports.in
libraries/: CMakeLists.txt
libraries/eosiolib/: CMakeLists.txt  crypto.cpp  eosiolib.cpp  simple_malloc.cpp
libraries/eosiolib/capi/eosio/: action.h  chain.h  crypto.h  db.h  permission.h  print.h  privileged.h  security_group.h  system.h  transaction.h  types.h
libraries/eosiolib/contracts/eosio/: action.hpp  dispatcher.hpp  eosio.hpp  key_value.hpp  kv.hpp  kv_base.hpp  map.hpp  multi_index.hpp  permission.hpp  privileged.hpp  security_group.hpp  system.hpp  transaction.hpp
libraries/eosiolib/core/eosio/: asset.hpp  crypto.hpp  crypto_utils.hpp  datastream.hpp  fixed_bytes.hpp  name.hpp  print.hpp  serialize.hpp  symbol.hpp
libraries/eosiolib/embed/eosio/: input_output_data.hpp
libraries/eosiolib/malloc/eosio/: big_memory_alloc.hpp  small_memory_alloc.hpp
libraries/eosiolib/tester/: crt0.cpp  tester.cpp  tester_intrinsics.cpp
libraries/eosiolib/tester/eosio/: tester.hpp
libraries/rt/: CMakeLists.txt
libraries/softfloat/: CMakeLists.txt
modules/: CMakeLists.txt  EosioCDTMacros.cmake  EosioNativeToolchain.cmake.in  EosioWasmToolchain.cmake.in  LibrariesExternalProject.cmake  dependencies.cmake  eosio.cdt-config.cmake  fetch_content.cmake
plugins/: CMakeLists.txt
plugins/eosio/: CMakeLists.txt  abigen.hpp  clang_wrapper.hpp  codegen.cpp  custom_attrs.cpp  gen.hpp  tracegen.hpp  utils.hpp
plugins/tests/: CMakeLists.txt  blanc_utils.cpp
scripts/: debian_install_llvm.sh  generate_package.sh.in
scripts/DEBIAN/: postinst.in
stdlibs/: CMakeLists.txt
stdlibs/libc/: CMakeLists.txt
stdlibs/libc++/: CMakeLists.txt  cxa_virtual_fallback.cpp
tests/: CMakeLists.txt
tests/gen-zpp-tests/: CMakeLists.txt  gen_zpp_test.sh.in  monster.pb.hpp  monster.proto  unittest_proto3_lite.pb.hpp  unittest_proto3_lite.proto  unittest_zpp_custom_options.pb.hpp  unittest_zpp_custom_options.proto
tests/gen-zpp-tests/google/protobuf/: unittest_import.pb.hpp  unittest_import.proto  unittest_import_public.pb.hpp
tests/integration/: CMakeLists.txt  codegen_tests.cpp  contracts.hpp.in  ecdsa_verify_test.cpp  kv_tests.cpp  malloc_free_test.cpp  memory_tests.cpp  pb_test.cpp  push_event_test.cpp  rsa_verify_test.cpp
tests/tester/: CMakeLists.txt  tester.cpp
tests/toolchain-tester/: CMakeLists.txt  codegen.in  tests.py  toolchain-tester.in
tests/toolchain/abigen-fail/: duplicated_kv_table_name.cpp  duplicated_kv_table_name.json  empty_contract.json  empty_contract_with_other_contract.json  wrong_contract_name.json
tests/toolchain/abigen-pass/: action_results_test.abi  aliased_type_variant_template_arg.abi  any_object_any_array.abi  any_object_any_array.cpp  any_object_any_array.json  key_value.abi  kv_caching_singleton_test.abi  kv_caching_singleton_test.cpp  kv_caching_singleton_test.json  kv_table_key_type.abi  kv_table_key_type.cpp  legacy_kv_table.abi  legacy_kv_table.cpp  legacy_kv_table.json  nested_container.abi  noop.abi  noop.cpp  noop.json  pb_msg_test.abi  pb_msg_test.cpp  pb_msg_test.json  struct_base_typedefd.abi  table_test.abi  table_test.cpp  using_std_array.abi
tests/unit/: CMakeLists.txt  asset_tests.cpp  binary_extension_tests.cpp  crypto_tests.cpp  datastream_tests.cpp  fixed_bytes_tests.cpp  legacy_tester.cpp  legacy_tester.hpp  memory_alloc_tests.cpp  name_tests.cpp  pb_serialize_tests.cpp  print_tests.cpp  rope_tests.cpp  serialize_tests.cpp  symbol_tests.cpp  system_tests.cpp  time_tests.cpp  varint_tests.cpp  zpp_json_test.proto  zpp_json_tests.cpp
tests/unit/test_contracts/: CMakeLists.txt  ecdsa_verify_test.cpp  enum_tests.cpp  kv_make_key_tests.cpp  kv_map_tests.cpp  kv_migrate.cpp  kv_single_index_tests.cpp  kv_variant_tests.cpp  malloc_free.cpp  malloc_tests.cpp  pb_msg_test.cpp  push_event_test.cpp  read_only_query_tests.cpp  rsa_verify_test.cpp  simple_tests.cpp  test.proto
tests/unit/test_contracts/capi/: db.c  print.c  system.c  transaction.c
tests/unit/test_contracts/kv_bios/: kv_bios.cpp
tools/: CMakeLists.txt
tools/include/eosio/: abimerge.hpp  cdt_abi.hpp
tools/src/: eosio-codegen.cpp  postpass.cc  zpp-protoc-plugin.cpp  zpp_options.proto
(+10 files in other folders)
